# FirstOpenGLProject

./: .gitignore  CMakeLists.txt  build.sh  configure.sh  run.sh
resources/: lightSource.vert  lightingShader.frag  lightingShader.vert  phongLighting.frag  phongLighting.vert  shader.frag  shader.vert
src/: glad.c  main.cpp  shader.frag
src/include/: camera.h  mesh.h  model.h  shader_s.h
